<?xml version="1.0"?>
<package>
  <name>fast_transport</name>
  <version>1.0.0</version>
  <description>Roboauto ROS messages</description>
  <license>BSD</license>
  <maintainer email="tomas.cernik@artin.cz">Tomas Cernik</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
